# LogWrapper

./: CMakeLists.txt  README.md  main.cpp  roslog.cpp
include/: LogWrapper.h  Pattern.hpp
src/: LogWrapper.cpp
